chore: compare-test-coverage

--- a/packages/react-docs/package.json
+++ b/packages/react-docs/package.json
@@ -99,7 +99,8 @@
     "coverageReporters": [
       "lcov",
       "text",
-      "html"
+      "html",
+      "json-summary"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/build"
