--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -64,7 +64,8 @@
     "coverageReporters": [
       "lcov",
       "text",
-      "html"
+      "html",
+      "json-summary"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/build"
