--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -53,7 +53,8 @@
     "coverageReporters": [
       "lcov",
       "text",
-      "html"
+      "html",
+      "json-summary"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/build"
