--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -51,7 +51,8 @@
     "coverageReporters": [
       "lcov",
       "text",
-      "html"
+      "html",
+      "json-summary"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/build"
