--- a/packages/react-base/package.json
+++ b/packages/react-base/package.json
@@ -73,7 +73,8 @@
     "coverageReporters": [
       "lcov",
       "text",
-      "html"
+      "html",
+      "json-summary"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/build"
