--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -85,7 +85,8 @@
     "coverageReporters": [
       "lcov",
       "text",
-      "html"
+      "html",
+      "json-summary"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/build"
