--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -50,7 +50,8 @@
     "coverageReporters": [
       "lcov",
       "text",
-      "html"
+      "html",
+      "json-summary"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/build"
