--- a/.github/workflows/compare-test-coverage.yml
+++ b/.github/workflows/compare-test-coverage.yml
@@ -153,6 +153,8 @@ jobs:
           - styled-system
           - theme
           - utils
+    outputs:
+      coverage-increased: ${{ steps.compare.outputs.COVERAGE_INCREASE }}
     steps:
       - name: Download coverage report
         uses: actions/download-artifact@v2
@@ -181,22 +183,14 @@ jobs:
 
           if (( $(echo "$input_functions > $main_functions" | bc -l) )); then
             echo "Function coverage in ${{ github.ref }} is greater or equal than main for package ${{ matrix.package }}."
-            echo "COVERAGE_INCREASE_${{ matrix.package }}=true" >> coverage_increase_flags.txt
-          else
-            echo "COVERAGE_INCREASE_${{ matrix.package }}=false" >> coverage_increase_flags.txt
+            echo "COVERAGE_INCREASE=true" >> $GITHUB_OUTPUT
           fi
-
         continue-on-error: true
-
-      - name: Upload coverage increase flags
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage_increase_flags
-          path: coverage_increase_flags.txt
 
   create-pr:
     needs: compare-coverage
     runs-on: ubuntu-latest
+    if: needs.compare-coverage.outputs.coverage-increased == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -206,28 +200,12 @@ jobs:
         with:
           name: coverage_increase_flags
 
-      - name: Check if coverage increased for any package
-        id: check-coverage
-        run: |
-          coverage_increased=false
-          if [ -f coverage_increase_flags.txt ]; then
-            while read -r line; do
-              if [[ "$line" == *"=true"* ]]; then
-                coverage_increased=true
-                break
-              fi
-            done < coverage_increase_flags.txt
-          fi
-          echo "coverage_increased=$coverage_increased" >> $GITHUB_ENV
-          echo "coverage_increased=$coverage_increased"
-
       - name: Install GitHub CLI
         run: |
           sudo apt-get update
           sudo apt-get install -y gh
 
       - name: Create PR to merge
-        if: env.coverage_increased == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
