--- a/.github/workflows/compare-test-coverage.yml
+++ b/.github/workflows/compare-test-coverage.yml
@@ -195,11 +195,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: ${{ github.event.inputs.base_branch }}
-          branch: ${{ github.event.inputs.compare_branch }}
-          title: Unit test coverage increased
+      - name: Install GitHub CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gh
 
+      - name: Create PR to merge
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh auth setup-git
+          gh pr create --title "Increase function coverage" --body "One or more packages have increased function coverage." --base ${{ github.event.inputs.base_branch }} --head ${{ github.event.inputs.compare_branch }}
