chore: compare-test-coverage

--- a/.github/workflows/compare-test-coverage.yml
+++ b/.github/workflows/compare-test-coverage.yml
@@ -155,6 +155,21 @@ jobs:
           - utils
     outputs:
       coverage-increased: ${{ steps.compare.outputs.COVERAGE_INCREASE }}
+      codemod-main-branch-coverage: ${{ steps.compare.outputs.CODEMODE_MAIN_BRANCH_COVERAGE }}
+      codemod-compared-branch-coverage: ${{ steps.compare.outputs.CODEMODE_COMPARED_BRANCH_COVERAGE }}
+      react-branch-coverage: ${{ steps.compare.outputs.REACT_MAIN_BRANCH_COVERAGE }}
+      react-compared-branch-coverage: ${{ steps.compare.outputs.REACT_COMPARED_BRANCH_COVERAGE }}
+      react-base-main-branch-coverage: ${{ steps.compare.outputs.REACT_BASE_MAIN_BRANCH_COVERAGE }}
+      react-base-compared-branch-coverage: ${{ steps.compare.outputs.REACT_BASE_COMPARED_BRANCH_COVERAGE }}
+      react-hooks-main-branch-coverage: ${{ steps.compare.outputs.REACT_HOOKS_MAIN_BRANCH_COVERAGE }}
+      react-hooks-compared-branch-coverage: ${{ steps.compare.outputs.REACT_HOOKS_COMPARED_BRANCH_COVERAGE }}
+      styled-system-main-branch-coverage: ${{ steps.compare.outputs.STYLED_SYSTEM_MAIN_BRANCH_COVERAGE }}
+      styled-system-compared-branch-coverage: ${{ steps.compare.outputs.STYLED_SYSTEM_COMPARED_BRANCH_COVERAGE }}
+      theme-main-branch-coverage: ${{ steps.compare.outputs.THEME_MAIN_BRANCH_COVERAGE }}
+      theme-compared-branch-coverage: ${{ steps.compare.outputs.THEME_COMPARED_BRANCH_COVERAGE }}
+      utils-main-branch-coverage: ${{ steps.compare.outputs.UTILS_MAIN_BRANCH_COVERAGE }}
+      utils-compared-branch-coverage: ${{ steps.compare.outputs.UTILS_COMPARED_BRANCH_COVERAGE }}
+      
     steps:
       - name: Download coverage report
         uses: actions/download-artifact@v3
@@ -180,6 +195,8 @@ jobs:
           echo "Package: ${{ matrix.package }}"
           echo "Main branch function coverage: $main_functions"
           echo "Input branch function coverage: $input_functions"
+          echo "$(echo ${{ matrix.package }} | tr '[:lower:]' '[:upper:]')_MAIN_BRANCH_COVERAGE=$main_functions" >> $GITHUB_ENV
+          echo "$(echo ${{ matrix.package }} | tr '[:lower:]' '[:upper:]')_COMPARED_BRANCH_COVERAGE=$input_functions" >> $GITHUB_ENV
 
           if (( $(echo "$input_functions > $main_functions" | bc -l) )); then
             echo "Function coverage in ${{ github.ref }} is greater or equal than main for package ${{ matrix.package }}."
@@ -205,4 +222,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh auth setup-git
-          gh pr create --title "Increase function coverage" --body "One or more packages have increased function coverage." --base ${{ github.event.inputs.base_branch }} --head ${{ github.event.inputs.compare_branch }}
+          gh pr create \ 
+          --body "One or more packages have increased function coverage.\n
+                  Codemod main branch coverage: ${{ needs.compare-coverage.outputs.codemod-main-branch-coverage }}\n
+                  Codemod compared branch coverage: ${{ needs.compare-coverage.outputs.codemod-compared-branch-coverage }}\n
+                  React main branch coverage: ${{ needs.compare-coverage.outputs.react-branch-coverage }}\n
+                  React compared branch coverage: ${{ needs.compare-coverage.outputs.react-compared-branch-coverage }}\n
+                  React base main branch coverage: ${{ needs.compare-coverage.outputs.react-base-main-branch-coverage }}\n
+                  React base compared branch coverage: ${{ needs.compare-coverage.outputs.react-base-compared-branch-coverage }}\n
+                  React hooks main branch coverage: ${{ needs.compare-coverage.outputs.react-hooks-main-branch-coverage }}\n
+                  React hooks compared branch coverage: ${{ needs.compare-coverage.outputs.react-hooks-compared-branch-coverage }}\n
+                  Styled system main branch coverage: ${{ needs.compare-coverage.outputs.styled-system-main-branch-coverage }}\n
+                  Styled system compared branch coverage: ${{ needs.compare-coverage.outputs.styled-system-compared-branch-coverage }}\n
+                  Theme main branch coverage: ${{ needs.compare-coverage.outputs.theme-main-branch-coverage }}\n
+                  Theme compared branch coverage: ${{ needs.compare-coverage.outputs.theme-compared-branch-coverage }}\n
+                  Utils main branch coverage: ${{ needs.compare-coverage.outputs.utils-main-branch-coverage }}\n
+                  Utils compared branch coverage: ${{ needs.compare-coverage.outputs.utils-compared-branch-coverage }}"
+          --base ${{ github.event.inputs.base_branch }} 
+          --head ${{ github.event.inputs.compare_branch }}
