--- a/.github/workflows/compare-test-coverage.yml
+++ b/.github/workflows/compare-test-coverage.yml
@@ -156,8 +156,8 @@ jobs:
           - utils
     outputs:
       coverage-increased: ${{ steps.compare.outputs.COVERAGE_INCREASE }}
-      codemod-main-branch-coverage: ${{ steps.compare.outputs.CODEMODE_MAIN_BRANCH_COVERAGE }}
-      codemod-compared-branch-coverage: ${{ steps.compare.outputs.CODEMODE_COMPARED_BRANCH_COVERAGE }}
+      codemod-main-branch-coverage: ${{ steps.compare.outputs.CODEMOD_MAIN_BRANCH_COVERAGE }}
+      codemod-compared-branch-coverage: ${{ steps.compare.outputs.CODEMOD_COMPARED_BRANCH_COVERAGE }}
       react-branch-coverage: ${{ steps.compare.outputs.REACT_MAIN_BRANCH_COVERAGE }}
       react-compared-branch-coverage: ${{ steps.compare.outputs.REACT_COMPARED_BRANCH_COVERAGE }}
       react-base-main-branch-coverage: ${{ steps.compare.outputs.REACT-BASE_MAIN_BRANCH_COVERAGE }}
@@ -225,20 +225,27 @@ jobs:
           gh auth setup-git
           gh pr create \
           --title "[UT] Improve test coverage" \
-          --body "One or more packages have increased function coverage.\n
-                  Codemod main branch coverage: ${{ needs.compare-coverage.outputs.codemod-main-branch-coverage }}\n
-                  Codemod compared branch coverage: ${{ needs.compare-coverage.outputs.codemod-compared-branch-coverage }}\n
-                  React main branch coverage: ${{ needs.compare-coverage.outputs.react-branch-coverage }}\n
-                  React compared branch coverage: ${{ needs.compare-coverage.outputs.react-compared-branch-coverage }}\n
-                  React base main branch coverage: ${{ needs.compare-coverage.outputs.react-base-main-branch-coverage }}\n
-                  React base compared branch coverage: ${{ needs.compare-coverage.outputs.react-base-compared-branch-coverage }}\n
-                  React hooks main branch coverage: ${{ needs.compare-coverage.outputs.react-hooks-main-branch-coverage }}\n
-                  React hooks compared branch coverage: ${{ needs.compare-coverage.outputs.react-hooks-compared-branch-coverage }}\n
-                  Styled system main branch coverage: ${{ needs.compare-coverage.outputs.styled-system-main-branch-coverage }}\n
-                  Styled system compared branch coverage: ${{ needs.compare-coverage.outputs.styled-system-compared-branch-coverage }}\n
-                  Theme main branch coverage: ${{ needs.compare-coverage.outputs.theme-main-branch-coverage }}\n
-                  Theme compared branch coverage: ${{ needs.compare-coverage.outputs.theme-compared-branch-coverage }}\n
-                  Utils main branch coverage: ${{ needs.compare-coverage.outputs.utils-main-branch-coverage }}\n
-                  Utils compared branch coverage: ${{ needs.compare-coverage.outputs.utils-compared-branch-coverage }}" \
+          --body "One or more packages have increased function coverage.
+                  ## Codemod
+                  Main branch coverage: ${{ needs.compare-coverage.outputs.codemod-main-branch-coverage }}
+                  Compared branch coverage: ${{ needs.compare-coverage.outputs.codemod-compared-branch-coverage }}
+                  ## React
+                  Main branch coverage: ${{ needs.compare-coverage.outputs.react-branch-coverage }}
+                  Compared branch coverage: ${{ needs.compare-coverage.outputs.react-compared-branch-coverage }}
+                  ## React Base
+                  Main branch coverage: ${{ needs.compare-coverage.outputs.react-base-main-branch-coverage }}
+                  Compared branch coverage: ${{ needs.compare-coverage.outputs.react-base-compared-branch-coverage }}
+                  ## React Hooks
+                  Main branch coverage: ${{ needs.compare-coverage.outputs.react-hooks-main-branch-coverage }}
+                  Compared branch coverage: ${{ needs.compare-coverage.outputs.react-hooks-compared-branch-coverage }}
+                  ## Styled System
+                  Styled system main branch coverage: ${{ needs.compare-coverage.outputs.styled-system-main-branch-coverage }}
+                  Styled system compared branch coverage: ${{ needs.compare-coverage.outputs.styled-system-compared-branch-coverage }}
+                  ## Theme
+                  Main branch coverage: ${{ needs.compare-coverage.outputs.theme-main-branch-coverage }}
+                  Compared branch coverage: ${{ needs.compare-coverage.outputs.theme-compared-branch-coverage }}
+                  ## Utils
+                  Main branch coverage: ${{ needs.compare-coverage.outputs.utils-main-branch-coverage }}
+                  Compared branch coverage: ${{ needs.compare-coverage.outputs.utils-compared-branch-coverage }}" \
           --base ${{ github.event.inputs.base_branch }} \
           --head ${{ github.event.inputs.compare_branch }}
